--- a/.bzrignore
+++ b/.bzrignore
@@ -6,3 +6,9 @@ xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.0
 xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.1
 xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.2
 xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.3
+3aa5cf04-ca45-458d-b6ee-cbf5ae87b788.xml.bak.0
+4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.0
+4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.1
+5027856d-8454-46e6-8413-1a9cb56ae758.xml.bak.0
+f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.0
+f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.1
