Ooops, forgot to refresh the expanded rows list vefore exiting

--- a/xdg/config/gtg/gtg.conf
+++ b/xdg/config/gtg/gtg.conf
@@ -2,8 +2,9 @@
 width = 940
 height = 703
 x_pos = 216
-y_pos = 24
+y_pos = 25
 tag_pane = True
 closed_task_pane = True
 quick_add = True
 bg_color_enable = True
+expanded_tasks = 0@1, 10@1, 1@1, 7@1
