--- a/xdg/config/gtg/gtg.conf
+++ b/xdg/config/gtg/gtg.conf
@@ -7,5 +7,5 @@ tag_pane = True
 closed_task_pane = True
 quick_add = True
 bg_color_enable = True
-collapsed_tasks = ,
-sort_col_id = 2, 0
+collapsed_tasks = 13@1, 4@1, 1@1
+tasklist_sort = 1, 1
