restore the scroll position after refresh

--- a/xdg/config/gtg/gtg.conf
+++ b/xdg/config/gtg/gtg.conf
@@ -1,11 +1,11 @@
 [browser]
-width = 940
-height = 702
-x_pos = 188
-y_pos = 25
+width = 658
+height = 421
+x_pos = 0
+y_pos = 24
 tag_pane = True
 closed_task_pane = True
 quick_add = True
 bg_color_enable = True
-collapsed_tasks = 13@1, 4@1, 1@1
+collapsed_tasks = 1@1,
 tasklist_sort = 1, 1
