indent is now a tag

--- a/xdg/config/gtg/gtg.conf
+++ b/xdg/config/gtg/gtg.conf
@@ -7,5 +7,5 @@ tag_pane = True
 closed_task_pane = True
 quick_add = True
 bg_color_enable = True
-collapsed_tasks = 1@1,
+collapsed_tasks = ,
 tasklist_sort = 1, 1
