Antoine est chiant

--- a/xdg/config/gtg/gtg.conf
+++ b/xdg/config/gtg/gtg.conf
@@ -1,11 +1,11 @@
 [browser]
-width = 885
-height = 725
+width = 1033
+height = 746
 x_pos = 0
 y_pos = 24
 tag_pane = True
 closed_task_pane = True
 quick_add = True
-bg_color_enable = True
+bg_color_enable = False
 collapsed_tasks = ,
 tasklist_sort = 1, 1
