support for notes

--- a/xdg/config/gtg/gtg.conf
+++ b/xdg/config/gtg/gtg.conf
@@ -1,11 +1,11 @@
 [browser]
-width = 710
-height = 494
+width = 787
+height = 577
 x_pos = 15
 y_pos = 96
 tag_pane = True
 closed_task_pane = True
 quick_add = True
-bg_color_enable = False
+bg_color_enable = True
 collapsed_tasks = ,
 tasklist_sort = 1, 1
