New note button

--- a/xdg/config/gtg/gtg.conf
+++ b/xdg/config/gtg/gtg.conf
@@ -1,10 +1,11 @@
 [browser]
 width = 759
 height = 464
-x_pos = 0
-y_pos = 24
+x_pos = 5
+y_pos = 48
 tag_pane = True
 closed_task_pane = True
+ctask_pane_height = 321
 quick_add = True
 bg_color_enable = True
 collapsed_tasks = ,
