--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,5 @@ include GTG/taskeditor/taskeditor.glade
 include data/firstrun_tasks.xml
 include gtg.desktop
 include CHANGELOG
-recursive-include data/icons *
+recursive-include data/icons *.png
+recursive-include data/icons *.svg
