--- a/gtg.desktop
+++ b/gtg.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
-Version=0.1
-Name=Getting Things Gnome!
+Version=1.0
+Name=Getting Things GNOME!
 Icon=gtg
-Comment=Personal organizer for the GNOME desktop environment.
+Comment=Personal organizer for the GNOME desktop environment
 Exec=/usr/bin/gtg %F
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Utility;
 StartupNotify=true
-Name[en_US]=Getting Things Gnome!
+Name[en_US]=Getting Things GNOME!
