--- a/gtg.desktop
+++ b/gtg.desktop
@@ -3,9 +3,11 @@ Version=1.0
 Name=Getting Things GNOME!
 Icon=gtg
 Comment=Personal organizer for the GNOME desktop environment
+Comment[pl]=Osobisty organizer dla środowiska GNOME
 Exec=/usr/bin/gtg %F
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Utility;
 StartupNotify=true
 Name[en_US]=Getting Things GNOME!
+Name[pl]=Getting Things GNOME!
