--- a/control
+++ b/control
@@ -8,7 +8,7 @@ Homepage: http://gtg.fritalk.com
 
 Package: gtg
 Architecture: all
-Depends: python (>= 2.5), python (<< 2.6), python-gtk2, python-glade2, python-xdg, python-gobject, python-configobj
+Depends: python (>= 2.5), python-gtk2, python-glade2, python-xdg, python-gobject, python-configobj
 Description: Getting Thing Gnome, a todo/notes applications for GNOME
  Getting Things Gnome is a Gnome application inspired by the Getting Things Done (GTD) 
  theory but built with flexibility and simplicity in mind. It supports hierachical 
