--- a/rules
+++ b/rules
@@ -1,54 +1,11 @@
 #!/usr/bin/make -f
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+%:
+	dh $@
 
-#include /usr/share/dpatch/dpatch.make
+clean:
+	dh $@
+	rm -fr build
 
-build: build-stamp
-
-build-stamp: 
-	dh_testdir
-	python setup.py build
-	touch $@
-
-clean: 
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-
-	python setup.py clean
-	rm -rf build GTG/*.pyc
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	python setup.py install --no-compile \
-				--prefix=$(CURDIR)/debian/gtg/usr \
-				--install-layout=deb
-
-binary-arch: binary-indep
-
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
-	dh_install 
-	dh_installmenu 
-	#dh_installman -i gtg.1
-	dh_link 
-	dh_compress 
-	dh_fixperms 
-	dh_pycentral 
-	dh_installdeb 
-	dh_gencontrol 
-	dh_md5sums 
-	dh_builddeb
-
-binary: binary-indep
-.PHONY: build clean binary-indep binary-arch binary install
+override_dh_auto_install:
+	dh_auto_install -- --install-scripts=/usr/share/gtg --install-lib=/usr/share/gtg
