- Convert all non-plugins glade files to GtkBuilder  - Fixes bug #412582: Convert core .glade files to GtkBuilder  - Fixes bug #398904: Stock Icons not found

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,4 +8,5 @@ include AUTHORS
 recursive-include data/icons *.png
 recursive-include data/icons *.svg
 include doc/gtg.1
+recursive-include GTG/plugins
 recursive-include locales *.po
