--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,10 @@
 include GTG/taskbrowser/taskbrowser.glade
 include GTG/taskeditor/taskeditor.glade
+include GTG/core/plugins/pluginmanager.glade
+include GTG/plugins/geolocalized_tasks/geolocalized.glade
+include GTG/plugins/rtm_sync/gtk.glade
+include GTG/plugins/helloworld/hello_world.glade
+include GTG/plugins/tomboy/tomboy.glade
 include gtg.desktop
 include CHANGELOG
 include README
