* MANIFEST.in now includes *.ui files (fixes tomboy plugin in 0.1.9-pre * fixed rtm plugin dependencies

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-include GTG *.glade
+recursive-include GTG *.ui
 recursive-include GTG *.gtg-plugin
 include gtg.desktop
 include CHANGELOG
