--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
-recursive-include GTG *.glade
-recursive-include GTG *.ui
-recursive-include GTG *.gtg-plugin
+include GTG/taskbrowser/taskbrowser.glade
+include GTG/taskeditor/taskeditor.glade
 include gtg.desktop
 include CHANGELOG
 include README
@@ -9,5 +8,4 @@ include AUTHORS
 recursive-include data/icons *.png
 recursive-include data/icons *.svg
 include doc/gtg.1
-recursive-include GTG/plugins
 recursive-include locales *.po
