--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,4 +10,5 @@ recursive-include data/icons *.png
 recursive-include data/icons *.svg
 include doc/gtg.1
 recursive-include GTG/plugins
+recursive-include GTG/plugins/rtm_sync/pyrtm *.py
 recursive-include locales *.po
