--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,7 +8,7 @@ include LICENSE
 include AUTHORS
 recursive-include data/icons *.png
 recursive-include data/icons *.svg
-include doc/gtg.1
+include doc/*.1
 recursive-include GTG/plugins
 recursive-include GTG/plugins/rtm_sync/pyrtm *.py
 recursive-include GTG/plugins/export/export_templates/*.*
