Move menu icon under Office

--- a/gtg.desktop
+++ b/gtg.desktop
@@ -7,7 +7,7 @@ Comment[pl]=Osobisty organizer dla środowiska GNOME
 Exec=/usr/bin/gtg %F
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Utility;
+Categories=GNOME;GTK;Office;
 StartupNotify=true
 Name[en_US]=Getting Things GNOME!
 Name[pl]=Getting Things GNOME!
