--- a/control
+++ b/control
@@ -1,15 +1,19 @@
 Source: gtg
-Section: x11
+Section: gnome
 Priority: optional
-Maintainer: Lionel Dricot <ploum@ploum.net>
-Build-Depends: debhelper (>= 7), python (>= 2.5), python-central, python-gtk2, python-glade2
-Standards-Version: 3.8.0
-Homepage: http://gtg.fritalk.com
+Maintainer: Luca Falavigna <dktrkranz@debian.org>
+Uploaders: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>
+Build-Depends: debhelper (>= 7.0.50)
+Build-Depends-Indep: python-support, python (>= 2.5)
+Standards-Version: 3.8.3
+Homepage: http://gtg.fritalk.com/
+Vcs-Svn: svn://svn.debian.org/python-apps/packages/gtg/trunk/
+Vcs-Browser: http://svn.debian.org/viewsvn/python-apps/packages/gtg/trunk/
 
 Package: gtg
 Architecture: all
-Depends: python (>= 2.5), python-gtk2, python-glade2, python-xdg, python-gobject, python-configobj
-Description: Getting Thing Gnome, a todo/notes applications for GNOME
- Getting Things Gnome is a Gnome application inspired by the Getting Things Done (GTD) 
- theory but built with flexibility and simplicity in mind. It supports hierachical 
- tasks, tags, notes, ...
+Depends: ${misc:Depends}, ${python:Depends}, python-gtk2 (>= 2.14), python-gnome2, python-glade2, python-dbus, python-xdg, python-configobj
+Description: organizer for the GNOME desktop environment
+ Getting Things GNOME! is an organizer for the GNOME desktop environment.
+ GTG focuses on usability and ease of use. Its main objective is to
+ provide a simple and yet flexible organization tool for life and work.
