--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,4 +13,5 @@ recursive-include data/icons *.svg
 include doc/*.1
 recursive-include GTG/plugins/rtm_sync/pyrtm *.py
 recursive-include GTG/plugins/export *
+recursive-include GTG/plugins/evolution_sync *.py
 recursive-include locales *.po
