bzr ignore updated

--- a/.bzrignore
+++ b/.bzrignore
@@ -40,3 +40,40 @@ doc/api
 **/**.gladep
 **/**.gladep.bak
 tmp
+locales/af
+locales/ar
+locales/ast
+locales/be
+locales/bg
+locales/ca
+locales/cs
+locales/da
+locales/de
+locales/en_GB
+locales/es
+locales/fi
+locales/fr
+locales/gl
+locales/hu
+locales/is
+locales/it
+locales/ja
+locales/jbo
+locales/ms
+locales/nds
+locales/nl
+locales/pl
+locales/pt
+locales/pt_BR
+locales/ro
+locales/ru
+locales/sl
+locales/sq
+locales/sv
+locales/te
+locales/tr
+locales/uk
+locales/zh_CN
+MANIFEST
+dist
+build
