Autostart from DBus (fixes #515431)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ include CHANGELOG
 include README
 include LICENSE
 include AUTHORS
+include org.GTG.service
 recursive-include data/icons *.png
 recursive-include data/icons *.svg
 include doc/*.1
