--- a/rules
+++ b/rules
@@ -1,10 +1,10 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@
+	dh --with quilt $@
 
 clean:
-	dh $@
+	dh --with quilt $@
 	rm -fr build
 
 override_dh_auto_install:
