--- a/.bzrignore
+++ b/.bzrignore
@@ -1,11 +1,5 @@
-xdg/data/gtg/4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.0
-xdg/data/gtg/4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.1
-xdg/data/gtg/4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.2
-xdg/data/gtg/4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.3
-xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.0
-xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.1
-xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.2
-xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.3
+xdg/data/gtg/4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.**
+xdg/data/gtg/f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.**
 3aa5cf04-ca45-458d-b6ee-cbf5ae87b788.xml.bak.0
 4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.0
 4af9e35b-8854-477e-b1f1-d95553664b5f.xml.bak.1
@@ -20,19 +14,11 @@ f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.0
 f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.1
 f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.2
 f8c7d20e-a627-49da-bf66-82f1fff293a6.xml.bak.3
-projects.xml.bak.0
-projects.xml.bak.1
-projects.xml.bak.2
-projects.xml.bak.3
-tags.xml.bak.0
-tags.xml.bak.1
-tags.xml.bak.2
-tags.xml.bak.3
+projects.xml.bak.**
+tags.xml.bak.**
 .pydevproject
 .project
 .settings
-.bzrignore
-
 debug_data
 _trial_temp
 doc/api
@@ -40,40 +26,7 @@ doc/api
 **/**.gladep
 **/**.gladep.bak
 tmp
-po/af
-po/ar
-po/ast
-po/be
-po/bg
-po/ca
-po/cs
-po/da
-po/de
-po/en_GB
-po/es
-po/fi
-po/fr
-po/gl
-po/hu
-po/is
-po/it
-po/ja
-po/jbo
-po/ms
-po/nds
-po/nl
-po/pl
-po/pt
-po/pt_BR
-po/ro
-po/ru
-po/sl
-po/sq
-po/sv
-po/te
-po/tr
-po/uk
-po/zh_CN
+po/**/
 MANIFEST
 dist
 build
