--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,4 +15,4 @@ include doc/*.1
 recursive-include GTG/plugins/rtm_sync/pyrtm *.py
 recursive-include GTG/plugins/export *
 recursive-include GTG/plugins/evolution_sync *.py
-recursive-include locales *.po
+recursive-include po *.po
