Namespace gtg's D-BUS service name
(LP: #582453)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,7 +8,7 @@ include CHANGELOG
 include README
 include LICENSE
 include AUTHORS
-include org.GTG.service
+include org.gnome.GTG.service
 recursive-include data/icons *.png
 recursive-include data/icons *.svg
 include doc/*.1
