--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Source: gtg
 Section: gnome
 Priority: optional
 Maintainer: Luca Falavigna <dktrkranz@debian.org>
-Uploaders: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>, Bryce Harrington <bryce@canonical.com>, Luca Invernizzi <invernizzi.l@gmail.com>
+Uploaders: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>, Bryce Harrington <bryce@canonical.com>, Luca Invernizzi <invernizzi.l@gmail.com>, Izidor Matušov <izidor.matusov@gmail.com>
 Build-Depends: debhelper (>= 7.0.50)
 Build-Depends-Indep: python-support, python (>= 2.5)
 Standards-Version: 3.8.4
