Start GTG in general, not from /usr/bin

--- a/gtg.desktop
+++ b/gtg.desktop
@@ -7,7 +7,7 @@ GenericName=Getting Things GNOME!
 Comment=Personal organizer for the GNOME desktop environment
 Comment[pl]=Osobisty organizer dla środowiska GNOME
 Icon=gtg
-Exec=/usr/bin/gtg %F
+Exec=gtg %F
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Office;
